--- a/Landing Pages/faq.html
+++ b/Landing Pages/faq.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="tfBodyText">
-<section id="faq">
+<section id="faq" style="max-width: 500px;">
 
 <h2>Frequently Asked Questions</h2>
 
@@ -36,7 +36,7 @@
   <p>Place your order before 3pm Pacific Time and we'll ship it the same day from beautiful Seattle, Washington.  Boom.  And everything placed after 3pm will ship first thing in the morning.</p>
  
   <h6>How long will my order take to get here?</h6>
-  <p>Depends where "here" is.  The majority of the Pacific Northwest will receive their order the next day, most of the Southwest will receive their order in two business days, the Midwest in three to four business days, and the Eastern Seaboardd in five business days.  Naturally, inclement weather and other circumstances beyond our control can delay shipping.  You can check out estimates specific to your zip code with <a href="http://www.ups.com/maps/results">this map</a> provided by UPS, which we use for most of our shipments (note that we ship from zip code 98057).  We're also happy to provide tracking for any order - just give us a call!</p>
+  <p>Depends where "here" is.  The majority of the Pacific Northwest will receive their order the next day, most of the Southwest will receive their order in two business days, the Midwest in three to four business days, and the Eastern Seaboard in five business days.  Naturally, inclement weather and other circumstances beyond our control can delay shipping.  You can check out estimates specific to your zip code with <a href="http://www.ups.com/maps/results">this map</a> provided by UPS, which we use for most of our shipments (note that we ship from zip code 98057).  We're also happy to provide tracking for any order - just give us a call!</p>
   
   <h6>How much will my shipping cost</h6>
   <p>The cost of shipping for everything in your cart will be calculated at checkout using a standard volume-based system.  We maintain fantastic deals with all of our carriers, and we price-check every one of them to select the cheapest option for each individual order.  Then we pass that exact cost on without any handling fees or upcharges whatsoever - in short, you pay exactly what we pay.  If you have questions, please don't hesitate to ask.</p>
