--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -21,8 +21,7 @@
 <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
 
 <h3>Shipping Times</h3>
-<p>Curious about when your order will arrive?  We ship everyting from Renton, WA, zip code 98057.  The majority of orders are shipped via UPS, unless otherwise specified, and you can check out Ground Time-in-Transit Maps here <a href="http://www.ups.com/maps/results">https://www.ups.com/maps/results</a>.</p>
-<p>Of course, we're happy to provide tracking for any order, just give us a call!</p>
+<p>Shipping times will vary depending on your location. The majority of the Pacific Northwest will receive their order the next day, most of the Southwest will receive their order in two business days, the Midwest in three to four business days, and the Eastern Seaboard in five business days. Naturally, inclement weather and other circumstances beyond our control can delay shipping. You can check out estimates specific to your zip code with <a href="http://www.ups.com/maps/results">this map</a> provided by UPS, which we use for most of our shipments (note that we ship from zip code 98057). We're also happy to provide tracking for any order - just give us a call!</p>
 
 </section>
 </div>
