--- a/Landing Pages/wholesalerRegistration.html
+++ b/Landing Pages/wholesalerRegistration.html
@@ -1,3 +1,66 @@
-<h2>Congratulations</h2>
+<head>
+<title>
+True Fabrications | Guarantees
+</title>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
-<p>Registration OK</p>
+
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+<style type="text/css">
+
+#wholesalerRegistrationContainer{
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+}
+
+.innerWholesalerRegistration{
+  vertical-align: top;
+  width: 24%;
+  min-width: 150px;
+  display: inline-block;
+}
+
+.innerWholesalerRegistration img{
+  width: 80%;
+}
+
+.innerWholesalerRegistration p{
+  padding-left: 10%;
+  width: 80%;
+}
+
+.innerWholesalerRegistration h3{
+  padding-left: 10%;
+  width: 80%;
+}
+
+</style>
+
+
+</head>
+<body>
+<div class="tfBodyText">
+<section id="terms">
+<div id="wholesalerRegistrationContainer">
+	<div class="innerWholesalerRegistration">
+    <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
+    <h3>100% satisfaction</h3>
+	</div>
+	<div class="innerWholesalerRegistration">
+    <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
+    <h3>Best Price</h3>
+	</div>
+	<div class="innerWholesalerRegistration">
+    <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
+    <h3>Same-Day Shipping</h3>
+	</div>
+	<div class="innerWholesalerRegistration">
+    <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
+    <h3>Free Backorder Shipping</h3>
+	</div>
+</div>
+</section>
+</div>
+</body>
