--- a/Landing Pages/jobs.html
+++ b/Landing Pages/jobs.html
@@ -10,19 +10,18 @@
 <section id="jobs">
 <h2 id="jobs">Jobs at True</h2>
 
-<!-- <p class="scrollLink"><a href="/about?target=innerNav">Top</a></p> -->
+<h3>About Us</h3>
 
-<h3>Our Story</h3>
-
-<p><strong>True Fabrications was founded in 2003 by a trio of college buddies who couldn’t find a decent wine bag.</strong> From basement beginnings, to an abandoned boot warehouse, to Seattle’s Pioneer Square, to SoDo, and finally into our current home at the epicenter of dynamic Fremont, we’ve grown at one of the fastest rates in the nation to become the leading designer and supplier of beverage lifestyle accessories worldwide. Our company of over 100 is anchored by an innovative, future-driven product development department, cutting-edge in-house design and supply teams, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry.</p>
+<p>The boundaries of the beverage world have been redrawn. No longer tied to traditional means and methods of drinking, the new world of beverage incorporates every aspect of the experience, from the popping of the cork, to the pairings, to the places you sip and people you raise a glass with. True Fabrications makes products for the new world of drink, a place where innovation, selection, exceptional quality and cutting-edge aesthetics intersect. From our office at the urban epicenter of Seattle, we conceptualize, create and supply thousands of products across multiple categories to retailers around the world. Then we back it all with pricing, branding and customer service unmatched in the industry.</p>
 
 <br />
 
-<h3>About Us</h3>
+<h3>Our Story</h3>
 
-<p>We’re about products that make drinking fresh and fun. With in-house industrial designers and 3-D printers, we conceptualize things that have never been created and find ways to make them real. We envision and develop our own branding, illustrate our own wine bags, strategize our own sales and marketing campaigns, and execute all of it, learning as we go. We travel the world to distribute thousands of products.</p><p>We love our products. Our own houses are peppered with them. And trust us, if you work here, your house will be too. But most of all we’re about the people our company is built on, and the culture that ties us together. We make genuine connections with our customers, and spare no effort in taking care of them. We work together and never hesitate in helping one another out. We’re lucky enough to work with the resources of an industry leader and the open, creative culture of a start-up. We know the importance of balancing work and play. We’ve been known to enjoy flash happy hours on the roof, form rec soccer, flag football and pub trivia teams, dress up for theme days from Canadian tuxedo to Mad Men, take time to hang out with our awesome office dogs, and fly to Hawaii to celebrate hard-earned success. We work hard, we play hard, we never stop innovating, and we relish every minute. It all makes for a company culture unlike any other. Join us!</p>
+<p>Founded in 2003 by a trio of college buddies who couldn’t find a decent wine bag, True Fabrications has grown from basement beginnings all the way to our current home in Seattle’s dynamic Fremont neighborhood. Today we’re the leading designer and supplier of beverage lifestyle accessories worldwide, still operating with the open, creative culture of a start-up. Our company of over 100 is anchored by an innovative, future-driven product development department, cutting-edge in-house design and supply teams, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. And with themed dress-up days, product launch parties, monthly company happy hours and trips to Hawaii to celebrate hard-earned success, there's never a dull moment in between all the hard work.</p>
 
-<br>
+
+<br />
 
 <h3>Our Company Culture</h3>
 
