first commit of the day.  Keeping record before I pull down from the CD pages

--- a/Landing Pages/customization.html
+++ b/Landing Pages/customization.html
@@ -8,12 +8,10 @@
 <body>
 <div class="tfBodyText">
 <section id="customization">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>At True Customization, we don’t believe in one size fits all. Each of our customers comes to us with a different goal, idea or challenge to tackle. We’re here to make it all come together perfectly.</p>
+<p>Whether you’re looking to make sure your brand stands out against competitors, or aiming to make your next event unforgettable, we offer more than 350 top-quality products designed to serve as blank canvases for a wide variety of customization. From the most basic of bottle openers to professional-caliber corkscrews, barware and glassware to flasks and cheese boards, there’s a perfect customized item for every occasion, brand and budget.  And while you're busy with everything else on your plate, we provide the all the tools for quick, professional customization, with turnaround times that set the industry standard.</p>
+<p>So try it out! With True there are low minimums and no contract. No one likes a hassle, so we aim to be hassle-free. You'll see a custom mock-up in 24 hours by our expert in-house design team, and our 100% Satisfaction Guarantee ensures you get the best value on the market. We provide exceptional printing quality, flexible quantity and pricing options, and unparalleled customer service. Can't find what you’re looking for? Give us a call or visit us online at www.truefabrications.com - you'll find hundreds of additional products to choose from.</p>
+<p>We look forward to working with you!</p>
 </section>
 </div>
 <div class="cont-cells"> 
