--- a/Landing Pages/wholesalerRegistration.html
+++ b/Landing Pages/wholesalerRegistration.html
@@ -43,6 +43,8 @@ True Fabrications | Guarantees
 <body>
 <div class="tfBodyText">
 <section id="terms">
+<h2>Registration Successful!</h2>
+<p>Awesome! You’ve registered successfully. Welcome to the wholesale side of things, where you can check your account history, view wholesale pricing, find old invoices, place new orders, pay online, experiment with customization and live chat with our sales representatives if you have any questions. Have fun!</p>
 <div id="wholesalerRegistrationContainer">
 	<div class="innerWholesalerRegistration">
     <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
