--- a/Landing Pages/about.html
+++ b/Landing Pages/about.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
-<div class="tfBodyText" style="width: 100%; max-width: 800px; margin: 0px auto;">
-<section id="about" style="width: 90%; max-width: 800px, height: auto; margin-left: 5%;">
-<h2 style="text-align: center; letter-spacing: 2px">HELLO THERE</h2>
-<h3 style="font-size: 2em; line-height: 45px; text-align: center">About True Fabrications</h3>
+<div class="tfBodyText">
+<section id="about" style="width: 80%; min-width: 300px; margin: auto;">
+<h2 style="text-align: center;">About True Fabrications</h2>
+<h3 style="font-size: 1.5em; text-align: center">We Started Out Small</h3>
 <p style="font-weight: bold; text-align: center">True Fabrications was founded in 2003 by a trio of college buddies who couldn’t find a wine bag. In the space of decade, the company that began with a single humble wine bag of its own has grown to a line of thousands of products spanning every sector of the beverage industry. Apparently, those three friends weren’t the only ones looking for better drink accessories.</p>
+<h3 style="font-size: 1.5em; text-align: center">Now We Have a Lot to Offer</h3>
 <p style="text-align: center">Today True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
-<p style="text-align: center">To top it all off, everything we do is backed by our <strong>100% Satisfaction Guarantee</strong>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
+<p style="text-align: center">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
 </section>
 </div>
