added the rest of the about pages, and set up the banner that we will use for the about page.  first about page structured

--- a/Landing Pages/about.html
+++ b/Landing Pages/about.html
@@ -1,21 +1,44 @@
 <head>
-<title>True Fabrications | Who We Are</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+
 </head>
 
 <body>
 <div class="tfBodyText">
-<section id="about" style="width: 80%; min-width: 300px; margin: auto;">
-<h2 style="text-align: center;">About True Fabrications</h2>
-<h3 style="font-size: 1.5em; text-align: center">We Started Out Small</h3>
-<p style="font-weight: bold; text-align: center">True Fabrications was founded in 2003 by a trio of college buddies who couldn’t find a wine bag. In the space of decade, the company that began with a single humble wine bag of its own has grown to a line of thousands of products spanning every sector of the beverage industry. Apparently, those three friends weren’t the only ones looking for better drink accessories.</p>
-<h3 style="font-size: 1.5em; text-align: center">Now We Have a Lot to Offer</h3>
-<p style="text-align: center">Today True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
+<section id="about">
+
+<!-- About Header -->
+<div class="aboutHeader">
+	<h2 style="text-align: center;">About True Fabrications</h2>
+	<nav>
+		<ul>
+		<a href="/who"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands"><li class="brandsLink">OUR BRANDS</li></a>
+		</ul>
+	</nav>
+</div>
+<!-- End Header -->
+<div class="tfThreePanelsContainer">
+	<div class="tfThreePanels">
+		<img src="/assets/images/content/CD_pages/true_who_1.png" />
+	</div>
+  <div class="tfThreePanels">
+    <img src="/assets/images/content/CD_pages/true_who_1.png" />
+  </div>
+  <div class="tfThreePanels">
+    <img src="/assets/images/content/CD_pages/true_who_1.png" />
+  </div>
+  <span class="stretch"></span>
+</div>
+<div style="width: 80%; min-width: 300px; margin: auto;">
+<h3 style="font-size: 1.5em; text-align: center">Our Mission Statement</h3>
+<p style="text-align: center">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
 <p style="text-align: center">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
+</div>
 </section>
 </div>
 <img src="http://twine.tf.production.na1.netsuitestaging.com/assets/images/content/banners/True_banner_AboutUs.jpg"></img>
