--- a/Landing Pages/aboutBanner.html
+++ b/Landing Pages/aboutBanner.html
@@ -1,24 +1,17 @@
 <head>
 <style type="text/css">
-	.banner { position: relative; overflow: auto; }
-    .banner li { list-style: none; }
-        .banner ul li { float: left; }
+
 </style>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
+
+
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="banner">
-    <ul>
-        <li><img src="/assets/images/content/banners/True_banner_AboutUs.jpg"/></li>
-        <li><img src="/assets/images/content/banners/True_banner_AboutUs.jpg"/></li>
-        <li><img src="/assets/images/content/banners/True_banner_AboutUs.jpg"/></li>
-    </ul>
-</div>
-<script type="text/javascript">
-	$(function() {
-    $('.banner').unslider();
-});
-</script>
-
-<script src="//unslider.com/unslider.min.js"></script>
-
+	<div class="tfBodyText">
+		<h2 style="text-align: center; color: #666666; margin-bottom: .5em;">About True Fabrications</h2>
+		<div style="text-align: center; width: 100%; margins: auto; font-size: 1.5em; margin-bottom: 3em;">
+			<a href="/about" style="margin-right: 10%;">WHO WE ARE</a><a href="/about">OUR GUARANTEES</a><a href="/about" style="margin-left: 10%">OUR BRANDS</a>
+		</div>
+	</div>	
 </body>
