--- a/Landing Pages/brands.html
+++ b/Landing Pages/brands.html
@@ -42,16 +42,16 @@ True Fabrications | Guarantees
 </head>
 <body>
 <div class="tfBodyText">
-<section id="guarantee">
+<section id="brands">
 
 <!-- About Header -->
 <div class="aboutHeader">
-  <h2 style="text-align: center;">About True Fabrications</h2>
-  <nav>
-    <ul>
-    <a href="/who" style="color:#BBBBBB;"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands" style="color:#BBBBBB;"><li class="brandsLink">OUR BRANDS</li></a>
-    </ul>
-  </nav>
+	<h2 style="text-align: center;">About True Fabrications</h2>
+	<nav>
+		<ul>
+		<a href="/who" style="color:#BBBBBB;"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee" style="color:#BBBBBB;"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands"><li class="brandsLink">OUR BRANDS</li></a>
+		</ul>
+	</nav>
 </div>
 <!-- End Header -->
 
