--- a/Landing Pages/contact.html
+++ b/Landing Pages/contact.html
@@ -24,7 +24,7 @@
 
     }
 
-    .firstColumn{
+    .firstContactColumn{
       display: table-cell;
       width: 150px;
       padding-left: 15px;
@@ -32,7 +32,7 @@
       border-right: 2px solid;*/
     }
 
-    .secondColumn{
+    .secondContactColumn{
       display: table-cell;
       width: 100px;
       text-align: right;
@@ -40,7 +40,7 @@
       font-weight: bold;
     }
 
-    .thirdColumn{
+    .thirdContactColumn{
       display: table-cell;
       width: 300px;
     }
@@ -76,17 +76,11 @@
       text-align: center;
     }
 
-    .tfThreePanels{
+    .tfThreePanels {
       background-color: #f2f2f2; 
-      position: relative; 
-      display: inline-block; 
-      width: 31%; 
-      height: 100%; 
-      vertical-align: top;
       padding-top: 50px;
       padding-bottom: 50px;
     }
-
 
     </style>
 
@@ -101,7 +95,7 @@
 
 </br>
 <div id="contactInfo">
-  <div class="firstColumn">
+  <div class="firstContactColumn">
     <div class="contactRow" style="font-weight:bold;">
       MAIN OFFICE:
     </div>
@@ -111,7 +105,7 @@
       Seattle, WA 98103</p>
     </div>
   </div>
-  <div class="secondColumn">
+  <div class="secondContactColumn">
     <div class="contactRow">
       PHONE
     </div>
@@ -122,7 +116,7 @@
       EMAIL
     </div>
   </div>
-  <div class="thirdColumn">
+  <div class="thirdContactColumn">
     <div class="contactRow">
       1.800.750.8783 <I><B>or</B></I> 206.624.3195
     </div> 
